# Multi-agents-project

./: README.md  REFLECTION.md  agents.py  constants.py  db.py  entities.py  main.py  munder_difflin.db  orchestrator.py  pyproject.toml  tools_functions.py
results/: test_results.csv
